<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:padding="5dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        style="@style/Theme.Snapfocus"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="80dp"
            android:contentDescription="@string/image"
            android:layout_height="80dp"
            android:layout_alignTop="@+id/nametext"
            android:layout_marginTop="-25dp"
            android:transitionName="pp" />

        <TextView
            android:id="@+id/ff"
            style="@style/ShapeAppearance.MaterialComponents.SmallComponent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/img1"
            android:text="@string/art_style"
            android:textColor="#eba229" />

        <TextView
            android:id="@+id/nametext"
            style="@style/ShapeAppearance.MaterialComponents.SmallComponent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/ff"
            android:text="@string/this_is_demo_name"
       />

        <TextView
            android:id="@+id/ee"
            style="@style/ShapeAppearance.MaterialComponents.SmallComponent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ff"
            android:layout_marginStart="21dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/img1"
            android:text="@string/status"
            android:textColor="#eba229" />

        <TextView
            android:id="@+id/coursetext"
            style="@style/ShapeAppearance.MaterialComponents.SmallComponent"
            android:layout_width="150dp"

            android:layout_height="wrap_content"
            android:layout_below="@+id/ff"
            android:layout_alignBottom="@+id/ee"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="1dp"
            android:layout_toEndOf="@+id/ee"
            android:text="@string/this_is_course_name"
           />
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>
