<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:orientation="vertical"
           >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:forceDarkAllowed="false"
                android:text="@string/sign_up"
                android:textColor="#eba229"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_a_new_account" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">



                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/name_text_input2"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="25dp"
                            android:layout_marginEnd="20dp"
                            app:endIconMode="clear_text"
                            app:errorEnabled="true"
                            app:startIconContentDescription="name"
                            app:startIconDrawable="@drawable/ic_account">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/full_name" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/name_text_input3"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            app:endIconMode="clear_text"
                            app:errorEnabled="true"
                            app:startIconContentDescription="name"
                            app:startIconDrawable="@drawable/ic_baseline_mail_24">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editText2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/e_mail_address"
                                android:inputType="textEmailAddress" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/name_text_input4"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            app:errorEnabled="true"
                            app:startIconContentDescription="name"
                            app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editText3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/create_password"
                                android:inputType="textPassword" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/name_text_input5"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            app:errorEnabled="true"
                            app:startIconContentDescription="name"
                            app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editText4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/confirm_password"
                                android:inputType="textPassword" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/already_have_an_account" />

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/ww"
                                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5sp"
                                android:text="@string/sign_in_now"
                                android:forceDarkAllowed="false"
                                android:textAllCaps="false"
                                android:textColor="#eba229"
                            />
                        </LinearLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/privacypolicy4"
                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20sp"
                            android:gravity="center"
                            android:text="@string/privacy_policy"
                            android:textAllCaps="false"
                            android:textColor="#557ab5"
                          />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorSecondary"
                android:indeterminateTintMode="src_atop"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:forceDarkAllowed="false"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="#eba229"
                android:text="@string/sign_up"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:forceDarkAllowed="false"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:backgroundTint="#eba229"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="15dp"
                android:text="@string/sign_up_later"
                android:textColor="@color/white" />
        </LinearLayout>
</androidx.core.widget.NestedScrollView>
